[project]
name = "pepkio-tm-annealing-temperature-calculator"
version = "0.1.0"
description = "Python client for Pepkio Tm / Annealing Temperature Calculator via the Tools REST API"
readme = "README_PYPI.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.scripts]
pepkio-tm-annealing-temperature-calculator = "pepkio_tm_annealing_temperature_calculator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pepkio_tm_annealing_temperature_calculator"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
